--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     container_name: internship-redis
     ports:
       - "6379:6379"
+    volumes:
+      - internship-redis:/data
 
   # mailpit - mail service
   mailpit:
@@ -41,10 +43,29 @@ services:
       - "1025:1025"
       - "8025:8025"
 
+  # Minio Service
+  minio:
+    image: minio/minio:latest
+    container_name: internship-minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio_secret
+    volumes:
+      - internship-minio:/data
+    command:
+      minio server --console-address ":9001" /data
+
 networks:
   laravel-exa:
     driver: bridge
 
 volumes:
   internship-db:
+    driver: local
+  internship-minio:
+    driver: local
+  internship-redis:
     driver: local
