--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,3 +15,4 @@ parameters:
         - ./*/*/FileToBeExcluded.php
 
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
