--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,3 +16,4 @@ parameters:
 
     checkMissingIterableValueType: false
     checkGenericClassInNonGenericObjectType: false
+    treatPhpDocTypesAsCertain: false
