--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@fancyapps/fancybox": "^3.5.7",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.2",
+        "bootstrap-icons": "^1.11.1",
+        "chart.js": "^4.4.0",
         "choices.js": "^10.2.0",
         "countup.js": "^2.8.0",
         "dropzone": "^6.0.0-beta.2",
@@ -28,6 +30,7 @@
         "jarallax": "^2.1.4",
         "parallax-js": "^3.1.0",
         "quill": "^1.3.7",
+        "sass": "^1.69.4",
         "smooth-scroll": "^16.1.3",
         "typed.js": "^2.0.16"
     }
