--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^40.0.0",
         "@fancyapps/fancybox": "^3.5.7",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.11.1",
         "chart.js": "^4.4.0",
         "choices.js": "^10.2.0",
+        "ckeditor5": "^40.0.0",
         "countup.js": "^2.8.0",
         "dropzone": "^6.0.0-beta.2",
         "flickity": "^3.0.0",
