upload image and video on S3

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,7 +10,7 @@ parameters:
     level: 8
 
     ignoreErrors:
-
+    - '#Access to an undefined property Illuminate\\Database\\Eloquent\\Model#'
     excludePaths:
         - ./*/*/FileToBeExcluded.php
 
